--- a/app/options.html
+++ b/app/options.html
@@ -30,6 +30,7 @@
                             <select class="form-control input-lg" id="extractionAPI">
                             <option>Boilerpipe</option>
                             <option>Mercury</option>
+                            <option>Boilerpipe HTML</option>
                             <option>Readability</option>
                         </select>
                     </div>
