Article Extractor : Extract the balise article directely without webservice, this can keep images in the article.

--- a/app/options.html
+++ b/app/options.html
@@ -31,6 +31,7 @@
                             <option>Boilerpipe</option>
                             <option>Mercury</option>
                             <option>Boilerpipe HTML</option>
+                            <option>ArticleExtractor</option>
                             <option>Readability</option>
                         </select>
                     </div>
